src/main/java/com/example/demo/reference/errors/core/package-info.java
/**
 * Contains the main component of error handling system
 *
 */
package com.example.demo.reference.errors.core;